@@ -6,7 +6,7 @@
 #
 # Copyright (c) 2000 by Zveno Pty Ltd.
 #
-# RCS: @(#) $Id: uri.test,v 1.15 2003/02/07 22:04:22 patthoyts Exp $
+# RCS: @(#) $Id: uri.test,v 1.16 2003/04/11 21:01:29 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -15,6 +15,8 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 set dirname [file dirname [info script]]
 source      [file join $dirname uri.tcl]
 package require uri
+
+puts "uri [package present uri]"
 
 # Take a key-value list and return list sorted by key, 
 # but with corresponding values staying with their key
@@ -414,6 +416,14 @@ test uri-7.0 {uri::split & uri::join} {
 } {http://tcl.apache.org/websh/faq.ws3#generic?foo=bar}
 
 # -------------------------------------------------------------------------
+
+test uri-8.0 {uri::split bug #676976, ill. char in scheme} {
+    set ls [uri::split ht,tp://tcl.apache.org/websh]
+    eval uri::join $ls
+} {http:///ht,tp://tcl.apache.org/websh}
+
+# -------------------------------------------------------------------------
+
 
 ::tcltest::cleanupTests
 return
